feat: show currencies in budgets setup
