# src/backend/GnuCashBudget.Api/Controllers/ExpenseAccountsController.cs
@@ -17,7 +17,7 @@ public class ExpenseAccountsController : ControllerBase
     }
 
     [HttpGet]
-    public async Task<IEnumerable<Account>> GetAllExpenseAccounts([FromQuery] bool bottomLevelOnly = false)
+    public async Task<IEnumerable<ExpenseAccount>> GetAllExpenseAccounts([FromQuery] bool bottomLevelOnly = false)
     {
         var response = await _sender.Send(new GetExpenseAccountsRequest(bottomLevelOnly));
         return response.Accounts;
