# src/backend/GnuCashBudget.Application/Handlers/GetExpenseAccountsHandler.cs
@@ -1,24 +1,22 @@
-using System.Runtime.CompilerServices;
 using GnuCashBudget.Application.Requests;
 using GnuCashBudget.Application.Responses;
 using GnuCashBudget.GnuCashData.Abstractions;
-using GnuCashBudget.GnuCashData.Abstractions.Models;
 using MediatR;
 
 namespace GnuCashBudget.Application.Handlers;
 
 public class GetExpenseAccountsHandler: IRequestHandler<GetExpenseAccountsRequest, GetExpenseAccountsResponse>
 {
-    private readonly IAccountRepository _accountsRepo;
+    private readonly IExpenseAccountsRepository _expenseAccountsRepository;
 
-    public GetExpenseAccountsHandler(IAccountRepository accountsRepo)
+    public GetExpenseAccountsHandler(IExpenseAccountsRepository expenseAccountsRepo)
     {
-        _accountsRepo = accountsRepo;
+        _expenseAccountsRepository = expenseAccountsRepo;
     }
 
     public async Task<GetExpenseAccountsResponse> Handle(GetExpenseAccountsRequest request, CancellationToken cancellationToken)
     {
-        var accounts = await _accountsRepo.GetAccountsByType(AccountType.Expense);
+        var accounts = await _expenseAccountsRepository.GetAllExpenseAccounts();
         return new GetExpenseAccountsResponse
         {
             Accounts = accounts.Where(x => !request.BottomLevelOnly || !x.ChildAccounts.Any())
