# src/backend/GnuCashBudget.Application/Responses/BudgetedAccountResponse.cs
@@ -1,3 +1,3 @@
 namespace GnuCashBudget.Application.Responses;
 
-public record BudgetedAccountResponse(int BudgetedAccountId, string AccountId, string FullName);
+public record BudgetedAccountResponse(int BudgetedAccountId, string AccountId, string FullName, string CurrencyCode);
