# src/backend/GnuCashBudget.GnuCashData.Abstractions/Models/Account.cs
@@ -9,3 +9,11 @@ public record Account(
     string Commodity,
     AccountType AccountType,
     ImmutableList<Account> ChildAccounts);
+    
+public record ExpenseAccount(string Id,
+    string Name,
+    string FullName,
+    string Commodity,
+    AccountType AccountType,
+    ImmutableList<ExpenseAccount> ChildAccounts,
+    string CurrencyCode);
